fix button on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ p {
     }
 
     button {
-        width: 100%; 
+        width: 150px; 
         margin: 10px 0;
     }
 }
